[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/Barkeeper1.gd" type="Script" id=1]
[ext_resource path="res://art/Bar/Barkeeper1.svg" type="Texture" id=2]
[ext_resource path="res://game/SpeechBubble.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 144.636, 65.0849 )

[node name="Barkeeper" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Button_In" type="TextureButton" parent="."]
margin_left = -120.0
margin_top = -50.0
margin_right = 128.0
margin_bottom = 74.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4.29593, 14.3197 )
shape = SubResource( 1 )

[node name="Text" parent="." instance=ExtResource( 3 )]
position = Vector2( 61.5819, -66.5169 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -126.0
margin_top = -96.0
margin_right = -17.0
margin_bottom = -10.0
bbcode_enabled = true
bbcode_text = "nothing"
text = "nothing"
[connection signal="area_entered" from="." to="." method="_on_Barkeeper_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Barkeeper_area_exited"]
[connection signal="pressed" from="Button_In" to="." method="_on_Button_In_pressed"]
